--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 blinker==1.6.2
 cachelib==0.10.2
 click==8.1.6
-dnspython==2.4.2
+dnspython==2.6.1
 Flask==2.3.2
 flask-mongo-session==1.2.0
 Flask-PyMongo==2.3.0
@@ -11,3 +11,5 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 pymongo==3.12.3
 Werkzeug==2.3.6
+python-dotenv==1.0.1
+pymongo[srv]
